# libcli

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: CMakeLists.txt
include/libcli/: Cli.h  Command.h  Menu.h  libcli.h
libcli/: CMakeLists.txt
libcli/libcli/: Cli.cpp  Command.cpp  Menu.cpp
